--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="card white no-margin">
     <div class="block">
       <h3>¡Hola Bariloche!</h3>
-      <p>Vamos a estar por ahí en enero y queremos movernos junto a vos y tu gente.</p>
+      <p>Vamos a estar por ahí del <strong>6 al 16 de enero</strong> y queremos movernos junto a vos y tu gente.</p>
       <a href="https://forms.gle/8xk4GBrPgbvv2K6T6" target="_blank" class="outbound btn-primary btn-youtube" id="Form_seres" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormSeres');">Quiero entradas</a>
       <a class="small">Dejanos tu contacto y te pasamos la data</a>
     </div>
@@ -90,10 +90,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="wrap">
 
   <div class="container">
-    <p><strong>4 fechas + 2 jams = ∞ goce</strong><br> Todavía nos encontramos a la búsqueda de más puntas pero ya tenemos algunas fechas confirmadas.</p>
+    <p><strong>Estamos agendando fechas</strong><br> Tenemos varias confirmadas pero vamos a seguir sumando sobre la marcha.</p>
 
-    <p><strong>El funk está intacto</strong> <br>Vamos a ir en un formato más reducido pero de alguna manera igual de numeroso.</p>
-    <p><strong>Nos veamos y nos bailemos.</strong></p>
+    <p><strong>El funk está intacto</strong> <br>Nos veamos y nos bailemos.</p>
     <a href="https://forms.gle/8xk4GBrPgbvv2K6T6" target="_blank" class="outbound btn-primary btn-spotify" id="Form_seres" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormSeres');">Quiero entradas</a>
     <a class="small">Dejanos tu contacto y te pasamos la data</a>
   </div>
