--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-192692331-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZH1ERR8Q0F"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-192692331-1');
+    gtag('config', 'G-ZH1ERR8Q0F');
   </script>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-T26VBC6');</script>
+  })(window,document,'script','dataLayer','GTM-TVZQ9PL');</script>
   <!-- End Google Tag Manager -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -25,15 +25,15 @@
 
   <meta name="description" content="Escuchá un poquito de funk en el sur">
 
-  <meta property="og:title" content="Palta & the mood en Bariloche">
+  <meta property="og:title" content="Palta & The Mood en Bariloche">
   <meta property="og:description" content="Escuchá un poquito de funk en el sur">
-  <meta property="og:image" content="http://comunal.ar/meta-social.jpg">
-  <meta property="og:url" content="http://comunal.ar">
+  <meta property="og:image" content="http://paltaandthemood.ar/meta-social.jpg">
+  <meta property="og:url" content="http://paltaandthemood.ar">
   <!--meta name="twitter:card" content="summary_large_image"-->
 
-  <meta property="og:site_name" content="comunal">
+  <meta property="og:site_name" content="Palta & The Mood en Bariloche">
   <meta name="twitter:image:alt" content="Escuchá un poquito de funk en el sur">
-  <title>comunal</title>
+  <title>Palta & The Mood</title>
 
   <link rel="stylesheet" href="static/styles.css">
   <!-- Facebook Pixel Code -->
@@ -59,9 +59,9 @@
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T26VBC6"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVZQ9PL"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
 <div class="wrap">
   <div class="container header">
@@ -72,7 +72,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="block">
       <h3>¡Hola Bariloche!</h3>
       <p>Vamos a estar por ahí del <strong>6 al 16 de enero</strong> y queremos movernos junto a vos y tu gente.</p>
-      <a href="https://forms.gle/8xk4GBrPgbvv2K6T6" target="_blank" class="outbound btn-primary btn-youtube" id="Form_seres" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormSeres');">Quiero entradas</a>
+      <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="outbound btn-primary btn-youtube" id="linkFormHero" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormHero');">Quiero entradas</a>
       <a class="small">Dejanos tu contacto y te pasamos la data</a>
     </div>
   </div>
@@ -93,18 +93,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <p><strong>Estamos agendando fechas</strong><br> Tenemos varias confirmadas pero vamos a seguir sumando sobre la marcha.</p>
 
     <p><strong>El funk está intacto</strong> <br>Nos veamos y nos bailemos.</p>
-    <a href="https://forms.gle/8xk4GBrPgbvv2K6T6" target="_blank" class="outbound btn-primary btn-spotify" id="Form_seres" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormSeres');">Quiero entradas</a>
+    <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="outbound btn-primary btn-spotify" id="linkForm" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickForm');">Quiero entradas</a>
     <a class="small">Dejanos tu contacto y te pasamos la data</a>
   </div>
 
   <div class="container">
     <p><strong>¿Querés un poco de Palta ahora… YA?</strong><br> Escuchate esta playlist que armamos exclusivamente para vos.</p>
-    <a href="https://forms.gle/8xk4GBrPgbvv2K6T6" target="_blank" class="outbound btn-secondary btn-spotify" id="Form_seres" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormSeres');">Escuchar Playlist</a>
+    <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="outbound btn-secondary btn-spotify" id="linkPlaylist" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickPlaylist');">Escuchar Playlist</a>
   </div>
 
   <div class="container">
     <strong>¿Tenés o sabés de un espacio?</strong><br> Queremos que nos cuentes todo.<br>Te dejamos para que chusmees un poquito más acerca de nosotros.<br>
-    <a href="https://forms.gle/8xk4GBrPgbvv2K6T6" target="_blank" class="outbound btn-terciary btn-spotify" id="Form_seres" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormSeres');">Descargar gacetilla</a>
+    <a href="https://www.dropbox.com/s/0eb9c53emlrv1o2/Palta%205%20comp.pdf?dl=0" target="_blank" class="outbound btn-terciary btn-spotify" id="linkGacetilla" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickGacetilla');">Descargar gacetilla</a>
   </div>
 
 
