--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="block">
       <h3>¡Hola Bariloche!</h3>
       <p>Vamos a estar por ahí del <strong>6 al 16 de enero</strong> y queremos movernos junto a vos y tu gente.</p>
-      <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="outbound btn-primary btn-youtube" id="linkFormHero" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormHero');">Quiero entradas</a>
+      <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="formLink btn-primary btn-youtube" id="linkFormHero" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormHero');">Quiero entradas</a>
       <a class="small">Dejanos tu contacto y te pasamos la data</a>
     </div>
   </div>
@@ -93,7 +93,7 @@
     <p><strong>Estamos agendando fechas</strong><br> Tenemos varias confirmadas pero vamos a seguir sumando sobre la marcha.</p>
 
     <p><strong>El funk está intacto</strong> <br>Nos veamos y nos bailemos.</p>
-    <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="outbound btn-primary btn-spotify" id="linkForm" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickForm');">Quiero entradas</a>
+    <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="formLink btn-primary btn-spotify" id="linkForm" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickForm');">Quiero entradas</a>
     <a class="small">Dejanos tu contacto y te pasamos la data</a>
   </div>
 
