--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 
   <div class="container">
     <p><strong>¿Querés un poco de Palta ahora… YA?</strong><br> Escuchate esta playlist que armamos exclusivamente para vos.</p>
-    <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="outbound btn-secondary btn-spotify" id="linkPlaylist" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickPlaylist');">Escuchar Playlist</a>
+    <a href="https://open.spotify.com/user/11157187341/playlist/15dR7ZzdGOA7osfwIYLQ3P?si=NbMjXzyCSWSw1QchiweGig" target="_blank" class="outbound btn-secondary btn-spotify" id="linkPlaylist" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickPlaylist');">Escuchar Playlist</a>
   </div>
 
   <div class="container">
     <strong>¿Tenés o sabés de un espacio?</strong><br> Queremos que nos cuentes todo.<br>Te dejamos para que chusmees un poquito más acerca de nosotros.<br>
-    <a href="https://www.dropbox.com/s/0eb9c53emlrv1o2/Palta%205%20comp.pdf?dl=0" target="_blank" class="outbound btn-terciary btn-spotify" id="linkGacetilla" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickGacetilla');">Descargar gacetilla</a>
+    <a href="https://www.dropbox.com/s/0eb9c53emlrv1o2/Palta%205%20comp.pdf?dl=1" target="_blank" class="outbound btn-terciary btn-spotify" id="linkGacetilla" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickGacetilla');">Descargar gacetilla</a>
   </div>
 
 
