moved to bariloche

--- a/bariloche/index.html
+++ b/bariloche/index.html
@@ -68,12 +68,14 @@
   <div class="container header">
     <h1 id="page-title"><a href="#" class="logo">Palta & The Mood</a></h1>
   </div>
-</div>
 
-<div class="wrap">
-  <div class="container no-margin">
-    <h2>Próximas fechas</h2>
-    <ul id="fechas"></ul>
+  <div class="card white no-margin">
+    <div class="block">
+      <h3>¡Hola Bariloche!</h3>
+      <p>Vamos a estar por ahí del <strong>6 al 16 de enero</strong> y queremos movernos junto a vos y tu gente.</p>
+      <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="formLink btn-primary btn-youtube" id="linkFormHero" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickFormHero');">Quiero entradas</a>
+      <a class="small">Dejanos tu contacto y te pasamos la data</a>
+    </div>
   </div>
 </div>
 
@@ -87,8 +89,38 @@
 </div>
 
 <div class="wrap">
+
   <div class="container">
-    <h2>Palta en las redes <small>Si nos necesitas, acá estamos</small></h2>
+    <p><strong>Estamos agendando fechas</strong><br> Tenemos varias confirmadas pero vamos a seguir sumando sobre la marcha.</p>
+
+    <p><strong>El funk está intacto</strong> <br>Nos veamos y nos bailemos.</p>
+    <a href="https://forms.gle/rLU397LVRZiQnjUv8" target="_blank" class="formLink btn-primary btn-spotify" id="linkForm" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickForm');">Quiero entradas</a>
+    <a class="small">Dejanos tu contacto y te pasamos la data</a>
+  </div>
+
+  <div class="container">
+    <p><strong>¿Querés un poco de Palta ahora… YA?</strong><br> Escuchate esta playlist que armamos exclusivamente para vos.</p>
+    <a href="https://open.spotify.com/user/11157187341/playlist/15dR7ZzdGOA7osfwIYLQ3P?si=NbMjXzyCSWSw1QchiweGig" target="_blank" class="outbound btn-secondary btn-spotify" id="linkPlaylist" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickPlaylist');">Escuchar Playlist</a>
+  </div>
+
+  <div class="container">
+    <strong>¿Tenés o sabés de un espacio o movida?</strong><br> Queremos que nos cuentes todo.<br>Te dejamos para que chusmees un poquito más acerca de nosotros.<br>
+    <a href="https://www.dropbox.com/s/0eb9c53emlrv1o2/Palta%205%20comp.pdf?dl=1" target="_blank" class="outbound btn-terciary btn-spotify" id="linkGacetilla" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickGacetilla');">Descargar gacetilla</a>
+  </div>
+
+
+</div>
+
+<div class="wrap">
+  <div class="container">
+    <h2>Próximas fechas <small>En otras localidades</small></h2>
+    <ul id="fechas"></ul>
+  </div>
+</div>
+
+<div class="wrap">
+  <div class="container">
+    <h2>Palta en las redes <small>Estamos en todas partes</small></h2>
     <ul id="social">
       <li><a href="https://open.spotify.com/artist/6gLZHR1lfosx4paq2mc6rH?si=VT77cxtZTNOeRcpyW1038A" target="_blank" class="social-spotify btn-spotify">Spotify</a></li>
       <li><a href="http://instagram.com/paltaandthemood" target="_blank" class="social-instagram">Instagram</a></li>
