title on homepage

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,300&display=swap" rel="stylesheet">
 
-  <meta name="description" content="Escuchá un poquito de funk en el sur">
+  <meta name="description" content="Se picó ese funk">
 
-  <meta property="og:title" content="Palta & The Mood en Bariloche">
-  <meta property="og:description" content="Escuchá un poquito de funk en el sur">
+  <meta property="og:title" content="Palta & The Mood">
+  <meta property="og:description" content="Se picó ese funk">
   <meta property="og:image" content="http://paltaandthemood.ar/meta-social.jpg">
   <meta property="og:url" content="http://paltaandthemood.ar">
   <!--meta name="twitter:card" content="summary_large_image"-->
 
-  <meta property="og:site_name" content="Palta & The Mood en Bariloche">
-  <meta name="twitter:image:alt" content="Escuchá un poquito de funk en el sur">
+  <meta property="og:site_name" content="Palta & The Mood">
+  <meta name="twitter:image:alt" content="Se picó ese funk">
   <title>Palta & The Mood</title>
 
   <link rel="stylesheet" href="static/styles.css">
